# smart-resume-job-matcher

./: .gitignore  README.md  app.py  matcher.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
sample_data/: sample_job_description.txt  sample_resume.txt
tests/: test_matcher.py
