[project]
name = "smart-resume-job-matcher"
version = "0.1.0"
description = "A Streamlit app that scores resume and job description match quality."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["streamlit>=1.36.0"]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
